--- a/seller/templates/seller/subcategory_list.html
+++ b/seller/templates/seller/subcategory_list.html
@@ -1,127 +1,91 @@
 {% extends "seller/base.html" %}
 {% load static %}
-
 {% block content %}
-<div class="container my-4">
 
-    <div class="d-flex justify-content-between align-items-center mb-3">
-        <h4>Sub-Categories | {{ subcategories.count }} Categories</h4>
-    </div>
-
-    <div class="table-responsive">
-        <table class="table align-middle table-bordered">
-            <thead class="table-light">
-                <tr>
-                    <th>Date</th>
-                    <th>Category Name</th>
-                    <th>Sub-Category Name</th>
-                    <th>Description</th>
-                    <th class="text-center">Action</th>
-                </tr>
-            </thead>
-            <tbody>
-
-                {% for subcategory in subcategories %}
-                <tr>
-                    <td>{{ subcategory.created_at|date:"d-m-Y" }}</td>
-                    <td><strong>{{ subcategory.category_name.category_name }}</strong></td>
-                    <td><strong>{{ subcategory.subcategory_name }}</strong></td>
-                    <td>{{ subcategory.description|truncatechars:50 }}</td>
-                    <td class="text-center">
-                        <!-- Edit -->
-                        <button class="btn btn-sm btn-outline-primary"
-                                data-bs-toggle="modal"
-                                data-bs-target="#editModal{{ subcategory.id }}">
-                            ✏️
-                        </button>
-
-                        <!-- Delete -->
-                        <button class="btn btn-sm btn-outline-danger"
-                                data-bs-toggle="modal"
-                                data-bs-target="#deleteModal{{ subcategory.id }}">
-                            🗑️
-                        </button>
-                    </td>
-                </tr>
-
-                <!-- Edit Modal -->
-                <div class="modal fade" id="editModal{{ subcategory.id }}" tabindex="-1">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <form method="POST" enctype="multipart/form-data" action="#">
-                                {% csrf_token %}
-                                <div class="modal-header">
-                                    <h5>Edit Sub-Category</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                </div>
-
-                                <div class="modal-body">
-                                    <div class="mb-3">
-                                        <label>Category</label>
-                                        <select name="category_name" class="form-control">
-                                            {% for category in categories %}
-                                                <option value="{{ category.id }}" {% if category.id == subcategory.category_name.id %}selected{% endif %}>
-                                                    {{ category.category_name }}
-                                                </option>
-                                            {% endfor %}
-                                        </select>
-                                    </div>
-
-                                    <div class="mb-3">
-                                        <label>Sub-Category Name</label>
-                                        <input type="text" name="subcategory_name" class="form-control"
-                                               value="{{ subcategory.subcategory_name }}">
-                                    </div>
-
-                                    <div class="mb-3">
-                                        <label>Description</label>
-                                        <textarea name="description" class="form-control">{{ subcategory.description }}</textarea>
-                                    </div>
-                                </div>
-
-                                <div class="modal-footer">
-                                    <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <button class="btn btn-primary">Save</button>
-                                </div>
-                            </form>
+<section class="content">
+    <div class="body_scroll">
+        <div class="block-header">
+            <div class="row">
+                <div class="col-lg-7 col-md-6 col-sm-12">
+                    <h2>Sub-Categories List</h2>
+                    <ul class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="{% url 'index' %}"><i class="zmdi zmdi-home"></i> Aero</a>
+                        </li>
+                        <li class="breadcrumb-item">eCommerce</li>
+                        <li class="breadcrumb-item active">Sub-Categories List</li>
+                    </ul>
+                    <button class="btn btn-primary btn-icon mobile_menu" type="button"><i
+                            class="zmdi zmdi-sort-amount-desc"></i></button>
+                </div>
+                <div class="col-lg-5 col-md-6 col-sm-12">
+                    <button class="btn btn-primary btn-icon float-right right_icon_toggle_btn" type="button"><i
+                            class="zmdi zmdi-arrow-right"></i></button>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row clearfix">
+                <div class="col-lg-12">
+                    <div class="card">
+                        <div class="table-responsive">
+                            <table class="table table-hover product_item_list c_table theme-color mb-0">
+                                <thead>
+                                    <tr>
+                                        <th>Category Name</th>
+                                        <th>Subcategory Name</th>
+                                        <th data-breakpoints="sm xs">Detail</th>
+                                        <th data-breakpoints="xs">Amount</th>
+                                        <th data-breakpoints="xs md">Stock</th>
+                                        <th data-breakpoints="sm xs md">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for subcategory in subcategories %}
+                                    <tr>
+                                        <td>
+                                            <h5>{{ subcategory.category_name }}</h5>
+                                        </td>
+                                        <td>
+                                            <h5>{{ subcategory.subcategory_name }}</h5>
+                                        </td>
+                                        <td><span class="text-muted">{{ subcategory.description }} </span></td>
+                                        <td>$16.00</td>
+                                        <td><span class="col-green">In Stock</span></td>
+                                        <td>
+                                            <a href="javascript:void(0);"
+                                                class="btn btn-default waves-effect waves-float btn-sm waves-green"><i
+                                                    class="zmdi zmdi-edit"></i></a>
+                                            <a href="javascript:void(0);"
+                                                class="btn btn-default waves-effect waves-float btn-sm waves-red"><i
+                                                    class="zmdi zmdi-delete"></i></a>
+                                        </td>
+                                    </tr>
+                                    {% empty %}
+                                    <tr>
+                                        <td colspan="5" class="text-center">No subcategories found</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="body">
+                            <ul class="pagination pagination-primary m-b-0">
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);"><i
+                                            class="zmdi zmdi-arrow-left"></i></a></li>
+                                <li class="page-item active"><a class="page-link" href="javascript:void(0);">1</a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);">2</a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);">3</a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);">4</a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);"><i
+                                            class="zmdi zmdi-arrow-right"></i></a></li>
+                            </ul>
                         </div>
                     </div>
                 </div>
-
-                <!-- Delete Modal -->
-                <div class="modal fade" id="deleteModal{{ subcategory.id }}" tabindex="-1">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <form method="POST" action="#">
-                                {% csrf_token %}
-                                <div class="modal-header">
-                                    <h5>Delete Sub-Category</h5>
-                                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
-                                </div>
-
-                                <div class="modal-body">
-                                    Are you sure you want to delete
-                                    <strong>{{ subcategory.subcategory_name }}</strong>?
-                                </div>
-
-                                <div class="modal-footer">
-                                    <button class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-                                    <button class="btn btn-danger">Delete</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-
-                {% empty %}
-                <tr>
-                    <td colspan="5" class="text-center">No sub-categories found</td>
-                </tr>
-                {% endfor %}
-
-            </tbody>
-        </table>
+            </div>
+        </div>
     </div>
-
-</div>
+</section>
 {% endblock %}
