--- a/seller/templates/seller/product_list.html
+++ b/seller/templates/seller/product_list.html
@@ -13,10 +13,12 @@
                         <li class="breadcrumb-item">eCommerce</li>
                         <li class="breadcrumb-item active">Product List</li>
                     </ul>
-                    <button class="btn btn-primary btn-icon mobile_menu" type="button"><i class="zmdi zmdi-sort-amount-desc"></i></button>
+                    <button class="btn btn-primary btn-icon mobile_menu" type="button"><i
+                            class="zmdi zmdi-sort-amount-desc"></i></button>
                 </div>
-                <div class="col-lg-5 col-md-6 col-sm-12">                
-                    <button class="btn btn-primary btn-icon float-right right_icon_toggle_btn" type="button"><i class="zmdi zmdi-arrow-right"></i></button>
+                <div class="col-lg-5 col-md-6 col-sm-12">
+                    <button class="btn btn-primary btn-icon float-right right_icon_toggle_btn" type="button"><i
+                            class="zmdi zmdi-arrow-right"></i></button>
                 </div>
             </div>
         </div>
@@ -30,103 +32,60 @@
                                     <tr>
                                         <th>Image</th>
                                         <th>Product Name</th>
-                                        <th data-breakpoints="sm xs">Detail</th>
+                                        <th data-breakpoints="sm xs">Subcategory Name</th>
                                         <th data-breakpoints="xs">Amount</th>
                                         <th data-breakpoints="xs md">Stock</th>
                                         <th data-breakpoints="sm xs md">Action</th>
                                     </tr>
                                 </thead>
                                 <tbody>
+                                    {% for product in products %}
                                     <tr>
-                                        <td><img src="{% static 'assets/images/ecommerce/1.png' %}" width="48" alt="Product img"></td>
-                                        <td><h5>Simple Black Clock</h5></td>
-                                        <td><span class="text-muted">randomised words even slightly believable</span></td>
-                                        <td>$16.00</td>
+                                        <td>
+                                            {% if product.image %}
+                                            <img src="{{ product.image.url }}" width="48" alt="Product img">
+                                            {% else %}
+                                        <td><img src="{% static 'assets/images/ecommerce/1.png' %}" width="48"
+                                                alt="Product img"></td>
+                                        {% endif %}
+
+                                        </td>
+
+                                        <td>
+                                            <h5>{{ product.product_name }}</h5>
+                                        </td>
+                                        <td><span class="text-muted">{{ product.subcategory_name }}</span></td>
+                                        <td>${{ product.price }}</td>
                                         <td><span class="col-green">In Stock</span></td>
                                         <td>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-red"><i class="zmdi zmdi-delete"></i></a>
+                                            <a href="javascript:void(0);"
+                                                class="btn btn-default waves-effect waves-float btn-sm waves-green"><i
+                                                    class="zmdi zmdi-edit"></i></a>
+                                            <a href="javascript:void(0);"
+                                                class="btn btn-default waves-effect waves-float btn-sm waves-red"><i
+                                                    class="zmdi zmdi-delete"></i></a>
                                         </td>
                                     </tr>
+                                    {% empty %}
                                     <tr>
-                                        <td><img src="{% static 'assets/images/ecommerce/10.pn' %}g" width="48" alt="Product img"></td>
-                                        <td><h5>Brone Candle</h5></td>
-                                        <td><span class="text-muted">It is a long established  will be distracted</span></td>
-                                        <td>$15.00</td>
-                                        <td><span class="col-amber">Low Stock</span></td>
-                                        <td>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                        </td>
+                                        <td colspan="6" class="text-center">No products found</td>
                                     </tr>
-                                    <tr>
-                                        <td><img src="{% static 'assets/images/ecommerce/11.pn' %}g" width="48" alt="Product img"></td>
-                                        <td><h5>Wood Simple Clock</h5></td>
-                                        <td><span class="text-muted">There passages of Lorem Ipsum available</span></td>
-                                        <td>$16.00</td>
-                                        <td><span class="col-amber">Low Stock</span></td>
-                                        <td>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="{% static 'assets/images/ecommerce/5.png' %}" width="48" alt="Product img"></td>
-                                        <td><h5>Unero Small Bag</h5></td>
-                                        <td><span class="text-muted">It is a long established fact that a distracted</span></td>
-                                        <td>$23.00</td>
-                                        <td><span class="col-red">Out Of Stock</span></td>
-                                        <td>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="{% static 'assets/images/ecommerce/6.png' %}" width="48" alt="Product img"></td>
-                                        <td><h5>Simple Black Clock</h5></td>
-                                        <td><span class="text-muted">Contrary to popular belief, simply random text</span></td>
-                                        <td>$16.00</td>
-                                        <td><span class="col-green">In Stock</span></td>
-                                        <td>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="{% static 'assets/images/ecommerce/2.png' %}" width="48" alt="Product img"></td>
-                                        <td><h5>Brone Lamp Glasses</h5></td>
-                                        <td><span class="text-muted">All the Lorem Ipsum generators on predefined chunks</span></td>
-                                        <td>$12.00</td>
-                                        <td><span class="col-green">In Stock</span></td>
-                                        <td>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                        </td>
-                                    </tr>
-                                    <tr>
-                                        <td><img src="{% static 'assets/images/ecommerce/3.png' %}" width="48" alt="Product img"></td>
-                                        <td><h5>Simple Black Clock</h5></td>
-                                        <td><span class="text-muted">established fact that a be distracted</span></td>
-                                        <td>$22.00</td>
-                                        <td><span class="col-red">Out Of Stock</span></td>
-                                        <td>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-green"><i class="zmdi zmdi-edit"></i></a>
-                                            <a href="javascript:void(0);" class="btn btn-default waves-effect waves-float btn-sm waves-red"><i class="zmdi zmdi-delete"></i></a>
-                                        </td>
-                                    </tr>        
+                                    {% endfor %}
                                 </tbody>
                             </table>
                         </div>
                     </div>
                     <div class="card">
-                        <div class="body">                            
+                        <div class="body">
                             <ul class="pagination pagination-primary m-b-0">
-                                <li class="page-item"><a class="page-link" href="javascript:void(0);"><i class="zmdi zmdi-arrow-left"></i></a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);"><i
+                                            class="zmdi zmdi-arrow-left"></i></a></li>
                                 <li class="page-item active"><a class="page-link" href="javascript:void(0);">1</a></li>
                                 <li class="page-item"><a class="page-link" href="javascript:void(0);">2</a></li>
                                 <li class="page-item"><a class="page-link" href="javascript:void(0);">3</a></li>
                                 <li class="page-item"><a class="page-link" href="javascript:void(0);">4</a></li>
-                                <li class="page-item"><a class="page-link" href="javascript:void(0);"><i class="zmdi zmdi-arrow-right"></i></a></li>
+                                <li class="page-item"><a class="page-link" href="javascript:void(0);"><i
+                                            class="zmdi zmdi-arrow-right"></i></a></li>
                             </ul>
                         </div>
                     </div>
