create a product edit template and function , modify in the details, base, product list template

--- a/seller/templates/seller/base.html
+++ b/seller/templates/seller/base.html
@@ -305,8 +305,8 @@
                     <div class="user-info">
                         <a class="image" href="profile.html"><img src="{% static 'assets/images/profile_av.jpg' %}" alt="User"></a>
                         <div class="detail">
-                            <h4>Michael</h4>
-                            <small>Super Admin</small>
+                            <h4>{{ user.name }}</h4>
+                            <small>Admin</small>
                         </div>
                     </div>
                 </li>
