--- a/seller/templates/seller/sign-up.html
+++ b/seller/templates/seller/sign-up.html
@@ -1,6 +1,41 @@
-﻿{% extends "seller/base.html" %}
-{% load static %}
+﻿{% load static %}
 {% block content %}
+<!doctype html>
+<html class="no-js " lang="en">
+
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge">
+    <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+    <meta name="description" content="Responsive Bootstrap 4 and web Application ui kit.">
+
+    <title>:: Aero Bootstrap4 Admin :: Sign Up</title>
+    <!-- Favicon-->
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="{% static 'assets/plugins/bootstrap/css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/plugins/jvectormap/jquery-jvectormap-2.0.3.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/plugins/charts-c3/plugin.css' %}" />
+
+    <link rel="stylesheet" href="{% static 'assets/plugins/morrisjs/morris.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/plugins/bootstrap-select/css/bootstrap-select.min.css' %}">
+    <link rel="stylesheet" href="{% static 'assets/plugins/jvectormap/jquery-jvectormap-2.0.3.css' %}"/>
+    <link rel="stylesheet" href="{% static 'assets/plugins/morrisjs/morris.css' %}" />
+    <link rel="stylesheet" href="{% static 'assets/css/style.min.css' %}">
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+    
+    <!-- Bootstrap Select -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.18/dist/css/bootstrap-select.min.css">
+
+    <link rel="stylesheet" href="assets/plugins/footable-bootstrap/css/footable.bootstrap.min.css">
+    <link rel="stylesheet" href="assets/plugins/footable-bootstrap/css/footable.standalone.min.css">
+
+    <!-- Toastr CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css"/>
+
+</head>
 <style>
     #otp-boxes {
         display: none !important;
@@ -122,7 +157,7 @@
                                 class="btn btn-success btn-block waves-effect waves-light">Register</button>
                         </div>
                         <div class="signin_with mt-3">
-                            <a class="link" href="sign-in.html">You already have a membership?</a>
+                            <a class="link" href="{% url 'signin' %}">You already have a membership?</a>
                         </div>
                     </div>
                 </form>
