--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -66,14 +66,14 @@
                                     <li><a href="{% url 'seller' %}">Become a Seller</a></li>
                                     {% if user.is_authenticated %}
                                     <li>
-                                        <a href="{% url 'wishlist' %}">
+                                        <a href="{% url 'accounts:wishlist' %}">
                                             <i class="icon-heart-o"></i> My Wishlist
                                             <span>(3)</span>
                                         </a>
                                     </li>
                                     {% endif %}
-                                    <li><a href="{% url 'about' %}">About Us</a></li>
-                                    <li><a href="{% url 'contact' %}">Contact Us</a></li>
+                                    <li><a href="{% url 'accounts:about' %}">About Us</a></li>
+                                    <li><a href="{% url 'accounts:contact' %}">Contact Us</a></li>
                                     {% if user.is_authenticated %}
                                     <li class="nav-item dropdown">
                                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
@@ -92,8 +92,8 @@
                                             {% endif %}
                                         </a>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" href="{% url 'dashboard' %}">My Profile</a>
-                                            <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
+                                            <a class="dropdown-item" href="{% url 'accounts:dashboard' %}">My Profile</a>
+                                            <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
                                         </div>
                                     </li>
                                     {% else %}
@@ -118,21 +118,21 @@
                             <i class="icon-bars"></i>
                         </button>
 
-                        <a href="index.html" class="logo">
+                        <a href="{% url 'accounts:index' %}" class="logo">
                             <img src="{% static 'assets/images/logo.png' %}" alt="Molla Logo" width="105" height="25">
                         </a>
 
                         <nav class="main-nav">
                             <ul class="menu sf-arrows">
                                 <li class="megamenu-container active">
-                                    <a href="{% url 'index' %}">Home</a>
+                                    <a href="{% url 'accounts:index' %}">Home</a>
                                 </li>
 
                                 <li class="megamenu-container active">
                                     <a href="#">Category</a>
                                 </li>
                                 <li class="megamenu-container active">
-                                    <a href="{% url 'products' %}">products</a>
+                                    <a href="{% url 'accounts:products' %}">products</a>
                                 </li>
                                 <li>
                                     <a href="category.html" class="sf-with-ul">Shop</a>
@@ -280,48 +280,6 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <a href="blog.html" class="sf-with-ul">Blog</a>
-
-                                    <ul>
-                                        <li><a href="blog.html">Classic</a></li>
-                                        <li><a href="blog-listing.html">Listing</a></li>
-                                        <li>
-                                            <a href="#">Grid</a>
-                                            <ul>
-                                                <li><a href="blog-grid-2cols.html">Grid 2 columns</a></li>
-                                                <li><a href="blog-grid-3cols.html">Grid 3 columns</a></li>
-                                                <li><a href="blog-grid-4cols.html">Grid 4 columns</a></li>
-                                                <li><a href="blog-grid-sidebar.html">Grid sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Masonry</a>
-                                            <ul>
-                                                <li><a href="blog-masonry-2cols.html">Masonry 2 columns</a></li>
-                                                <li><a href="blog-masonry-3cols.html">Masonry 3 columns</a></li>
-                                                <li><a href="blog-masonry-4cols.html">Masonry 4 columns</a></li>
-                                                <li><a href="blog-masonry-sidebar.html">Masonry sidebar</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Mask</a>
-                                            <ul>
-                                                <li><a href="blog-mask-grid.html">Blog mask grid</a></li>
-                                                <li><a href="blog-mask-masonry.html">Blog mask masonry</a></li>
-                                            </ul>
-                                        </li>
-                                        <li>
-                                            <a href="#">Single Post</a>
-                                            <ul>
-                                                <li><a href="single.html">Default with sidebar</a></li>
-                                                <li><a href="single-fullwidth.html">Fullwidth no sidebar</a></li>
-                                                <li><a href="single-fullwidth-sidebar.html">Fullwidth with sidebar</a>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
-                                <li>
                                     <a href="elements-list.html" class="sf-with-ul">Elements</a>
 
                                     <ul>
@@ -419,8 +377,8 @@
                                 </div><!-- End .dropdown-cart-total -->
 
                                 <div class="dropdown-cart-action">
-                                    <a href="{% url 'cart' %}" class="btn btn-primary">View Cart</a>
-                                    <a href="{% url 'checkout' %}" class="btn btn-outline-primary-2"><span>Checkout</span><i
+                                    <a href="{% url 'accounts:cart' %}" class="btn btn-primary">View Cart</a>
+                                    <a href="{% url 'accounts:checkout' %}" class="btn btn-outline-primary-2"><span>Checkout</span><i
                                             class="icon-long-arrow-right"></i></a>
                                 </div><!-- End .dropdown-cart-total -->
                             </div><!-- End .dropdown-menu -->
@@ -464,10 +422,10 @@
                                 <h4 class="widget-title">Useful Links</h4><!-- End .widget-title -->
 
                                 <ul class="widget-list">
-                                    <li><a href="{% url 'about' %}">About</a></li>
+                                    <li><a href="{% url 'accounts:about' %}">About</a></li>
                                     <li><a href="#">How to shop on Molla</a></li>
-                                    <li><a href="{% url 'faq' %}">FAQ</a></li>
-                                    <li><a href="{% url 'contact' %}">Contact us</a></li>
+                                    <li><a href="{% url 'accounts:faq' %}">FAQ</a></li>
+                                    <li><a href="{% url 'accounts:contact' %}">Contact us</a></li>
                                     <!-- <li><a href="login.html">Log in</a></li> -->
                                 </ul><!-- End .widget-list -->
                             </div><!-- End .widget -->
@@ -494,8 +452,8 @@
 
                                 <ul class="widget-list">
                                     <li><a href="#">Sign In</a></li>
-                                    <li><a href="{% url 'cart' %}">View Cart</a></li>
-                                    <li><a href="{% url 'wishlist' %}">My Wishlist</a></li>
+                                    <li><a href="{% url 'accounts:cart' %}">View Cart</a></li>
+                                    <li><a href="{% url 'accounts:wishlist' %}">My Wishlist</a></li>
                                     <li><a href="#">Track My Order</a></li>
                                     <li><a href="#">Help</a></li>
                                 </ul><!-- End .widget-list -->
@@ -722,7 +680,7 @@
                             <div class="tab-content" id="tab-content-5">
                                 <div class="tab-pane fade show active" id="signin" role="tabpanel"
                                     aria-labelledby="signin-tab">
-                                    <form method="POST" id="login-form" action="{% url 'login' %}">
+                                    <form method="POST" id="login-form" action="{% url 'accounts:login' %}">
                                         {% csrf_token %}
                                         <div class="form-group">
                                             <label for="login-identifier">Phone or Email *</label>
@@ -749,7 +707,7 @@
                                         <p class="text-center">or sign in with</p>
                                         <div class="row">
                                             <div class="col-sm-6">
-                                                <a href="{% url 'social:begin' 'google-oauth2' %}"
+                                                <a href="{% url 'accounts:social:begin' 'google-oauth2' %}"
                                                     class="btn btn-login btn-g">
                                                     <i class="icon-google"></i>
                                                     Login With Google
@@ -793,7 +751,7 @@
                                         <p class="text-center">or sign in with</p>
                                         <div class="row justify-content-center">
                                             <div class="col-sm-6">
-                                                <a href="{% url 'social:begin' 'google-oauth2' %}"
+                                                <a href="{% url 'accounts:social:begin' 'google-oauth2' %}"
                                                     class="btn btn-login btn-g">
                                                     <i class="icon-google"></i> Login With Google
                                                 </a>
@@ -863,7 +821,7 @@
             const otp = document.getElementById("register-otp")?.value || "";
             const csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
 
-            fetch("{% url 'signup' %}?role=C", {
+            fetch("{% url 'accounts:signup' %}?role=C", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/x-www-form-urlencoded",
@@ -884,7 +842,7 @@
                     } else if (data.status === "success") {
                         messageBox.textContent = "Signup successful!";
                         $('#signin-modal').modal('hide');
-                        window.location.href = "{% url 'login' %}";
+                        window.location.href = "{% url 'accounts:login' %}";
                     } else {
                         messageBox.style.display = "block";
                         messageBox.classList.remove("text-success");
@@ -906,7 +864,7 @@
             const csrfToken = document.querySelector('[name=csrfmiddlewaretoken]').value;
             const messageBox = document.getElementById("login-message");
 
-            fetch("{% url 'login' %}", {
+            fetch("{% url 'accounts:login' %}", {
                 method: "POST",
                 headers: {
                     "Content-Type": "application/x-www-form-urlencoded",
