--- a/accounts/templates/cart.html
+++ b/accounts/templates/cart.html
@@ -16,7 +16,7 @@
     <nav aria-label="breadcrumb" class="breadcrumb-nav">
         <div class="container">
             <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
+                <li class="breadcrumb-item"><a href="{% url 'accounts:index' %}">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">Shop</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Shopping Cart</li>
             </ol>
@@ -164,7 +164,7 @@
                                     </tr><!-- End .summary-shipping-row -->
 
                                     <tr class="summary-shipping-estimate">
-                                        <td>Estimate for Your Country<br> <a href="{% url 'dashboard' %}">Change address</a>
+                                        <td>Estimate for Your Country<br> <a href="{% url 'accounts:dashboard' %}">Change address</a>
                                         </td>
                                         <td>&nbsp;</td>
                                     </tr><!-- End .summary-shipping-estimate -->
@@ -176,11 +176,11 @@
                                 </tbody>
                             </table><!-- End .table table-summary -->
 
-                            <a href="{% url 'checkout' %}" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO
+                            <a href="{% url 'accounts:checkout' %}" class="btn btn-outline-primary-2 btn-order btn-block">PROCEED TO
                                 CHECKOUT</a>
                         </div><!-- End .summary -->
 
-                        <a href="{% url 'category_list' %}" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
+                        <a href="#" class="btn btn-outline-dark-2 btn-block mb-3"><span>CONTINUE
                                 SHOPPING</span><i class="icon-refresh"></i></a>
                     </aside><!-- End .col-lg-3 -->
                 </div><!-- End .row -->
