--- a/seller/templates/seller/base.html
+++ b/seller/templates/seller/base.html
@@ -289,7 +289,7 @@
                         class="zmdi zmdi-group-work"></i></a></li>
             <li><a href="javascript:void(0);" class="js-right-sidebar" title="Setting"><i
                         class="zmdi zmdi-settings zmdi-hc-spin"></i></a></li>
-            <li><a href="{% url 'logout' %}" class="mega-menu" title="Sign Out"><i class="zmdi zmdi-power"></i></a></li>
+            <li><a href="{% url 'accounts:logout' %}" class="mega-menu" title="Sign Out"><i class="zmdi zmdi-power"></i></a></li>
         </ul>
     </div>
 
