modify the about template

--- a/accounts/templates/base.html
+++ b/accounts/templates/base.html
@@ -229,7 +229,7 @@
                                                                         class="tip tip-new">New</span></span></a></li>
                                                         <li><a href="product-gallery.html">Gallery</a></li>
                                                         <li><a href="product-sticky.html">Sticky Info</a></li>
-                                                        <li><a href="product-sidebar.html">Boxed With Sidebar</a></li>
+                                                        <li><a href="{% url 'accounts:product_detail' %}">Boxed With Sidebar</a></li>
                                                         <li><a href="product-fullwidth.html">Full Width</a></li>
                                                         <li><a href="product-masonry.html">Masonry Sticky Info</a></li>
                                                     </ul>
@@ -789,6 +789,8 @@
     <script src="{% static 'assets/js/jquery.waypoints.min.js' %}"></script>
     <script src="{% static 'assets/js/superfish.min.js' %}"></script>
     <script src="{% static 'assets/js/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'assets/js/bootstrap-input-spinner.js' %}"></script>
+    <script src="{% static 'assets/js/jquery.elevateZoom.min.js' %}"></script>
     <script src="{% static 'assets/js/jquery.magnific-popup.min.js' %}"></script>
     <!-- Main JS File -->
     <script src="{% static 'assets/js/main.js' %}"></script>
